Version 1.9.2m-DEVEL (September 17, 2010)
--------------------------------
! Properly handle nat/mangle table rules for IPv4/IPv6
* In case IPv6 is detected, require that the ip6tables-binary is available to ensure a proper/secure policy
+ Implemented IPv6 detection variable so we don't have to perform a sysctl_key for each check
! Several (regression) fixes + improvements related to the previous IPv6 changes
* Changed default policy for IPv6 when IPv4 mode is used (and vice versa). It now
  eg. will accept IPv6 traffic from the internal interface(s) by default (Debian bug #596170)

Version 1.9.2l (August 26, 2010)
--------------------------------
* Implement sysctl_key() function and use it for IPv6 detection (thanks Lonnie)
! The recent changes caused setting net.ipv4.icmp_echo_ignore_all to fail (thanks Lonnie)
* BusyBox doesn't understand grep -x, so use ^$ instead + dots should be escaped (thanks Lonnie)
* From now on explicitly set all variables for sysctl wildcard variables (like "net.ipv4.conf.*.rp_filter")
  since newer kernels handle those differently now (Thanks to Klemen Mihevc)
+ The "Blocked Host" feature adds the BLOCK_HOSTS_BIDIRECTIONAL option to specify whether hosts are
  blocked both Inbound and Outbound (default) or Inbound only. (Thanks Philip)
* Don't masquerade IPv6/proto 41 (thanks Klemen Mihevc)
* Use unset IFS only for actual rules
* Re-added local IFS in environment
+ Added option to enable/disable antispoofing for internal/dmz nets
! Don't "unset IFS" immediately after "local IFS" declaration in functions, this breaks older shells
+ Added option to enable/disable IGMP logging
! Modprobe didn't work properly for old modprobe/distros when modules were compiled in-kernel
+ Configure option to allow user to enable full access for the external subnet
+ Implemented EXT_BROADCAST_CHAIN

Version 1.9.2k (March 25, 2010)
-------------------------------
! check_interface() function didn't work for VLAN interfaces